syntax = "proto3";
package nan0;
option go_package = "nan0";

message Service {
    bool expired = 1;
    int32 port = 2;
    int64 startTime = 3;
    string hostName = 4;
    string uri = 5;
    string serviceName = 6;
    string serviceType = 7;
}
